# fulldome-projector-aligner

./: .gitignore  Cargo.toml  README.md
src/: camera_calibration.rs  control.rs  images.rs  lib.rs  locator.rs  main.rs  math.rs  network.rs  photo.rs  surfaces.rs
