[package]
name = "aligner"
version = "0.1.0"
authors = ["Tom Riley <tom@smallroomsoftware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# installed opencv libs with:
# brew install llvm pkg-config opencv
regex = "1"
lazy_static = "1.4.0"
opencv = {version = "0.34", features = ["contrib"]}
glm = "0.2.3"
xmltree = "0.10.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { git = "https://github.com/clap-rs/clap/" }
log = "0.4.8"
simplelog = "0.7.6"
tempfile = "3.1.0"


